# tree-sitter-c_preproc

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  note.txt  package.json  pyproject.toml  setup.py  trace.txt  tree-sitter.json
bindings/c/: tree-sitter-c-preproc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_c_preproc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCPreproc/: c_preproc.h
bindings/swift/TreeSitterCPreprocTests/: TreeSitterCPreprocTests.swift
src/: grammar.json  node-types.json  parser.c
