[package]
name = "tree-sitter-c-preproc"
description = "C preprocessor grammar for tree-sitter"
version = "0.1.0"
authors = ["Haoran Peng <hrpeng@cs.washington.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "c-preproc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://gitlab.cs.washington.edu/harvest/tree-sitter-c_preproc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
